[project]
name = "kaxe"
version = "1.2.7"
authors = [
  { name="Valter Yde Daugberg", email="valteryde@hotmail.com" },
]
description = "A small graphing tool for functions, points, equations and more"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "pillow",
  "fondi",
  "sympy",
  "scipy",
  "openpyxl",
  "tqdm",
  "numba"
]

[project.urls]
Homepage = "https://github.com/valteryde/kaxe"
Issues = "https://github.com/valteryde/kaxe/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
